$Id: CHANGES,v 1.58 2000/05/28 18:16:42 stelian Exp $

Changes between versions 0.4b16 and 0.4b17 (released ??????????????)
====================================================================

1.	The -F script is called now *only* at the end of a tape,
	not at the end of the dump. Thanks to Chris
	<haul@informatik.tu-darmstadt.de> for the bug report.

2.	Use posix signal handling to preserve dump functionality 
	with libc5. Thanks to Jeff Johnson <jbj@redhat.com> for
	the patch.

3.	Made the exit code of restore in case of a 'C'ompare
	command reflect the result of the compare. An exit status
	of 0 means the dump archive is correct, 1 means tape errors,
	2 means that some files were modified.

4.	Made quotes work in interactive restore.

5.	Small fixes in order to allow dump to compile with a 
	really old e2fsprogs version.

Changes between versions 0.4b15 and 0.4b16 (released March 11, 2000)
====================================================================

1.	Fixed some several duplicate 'DUMP: DUMP:' in the
	output of dump.

2.	Corrected the estimation of blocks to dump. Note that
	this is still wrong for large directory inodes, due
	to the size of a BSD directory entry on the tape
	(estimation is based on the size of the ext2 directory,
	which is smaller because it doesn't contain the null
	character at the end).

3.	Made dump report the total number of MB written to
	tape at the end of run. Thanks to W. Reilly Cooley
	<wcooley@nakedape.cc> for the patch.

4.	Added the -X option to restore giving the possibility
	to read the names of the files to be extracted/listed 
	from a text file (in addition of the command line). 
	Thanks to Dejan Muhamedagic <dejan@quant-x.com> for the 
	patch.

5.	Added the device name and the current volume number
	as arguments to the end of tape script (dump -F option).

6.	Made the multi-volume dump work again (after having 
	broken it in 0.4b15). 

Changes between versions 0.4b14 and 0.4b15 (released March 2, 2000)