@@ -1,4 +1,4 @@
-$Id: TODO,v 1.14 2000/05/28 18:16:42 stelian Exp $
+$Id: TODO,v 1.15 2000/05/29 14:17:37 stelian Exp $
 
 Need to verify:
 ---------------
@@ -44,9 +44,6 @@ All others:
 	     ufsrestore(1M) to determine whether a file  is  in
 	     the dump file that is being restored.
 
-9.	Add readline capabilities to interactive restore. Does
-	this mean huge static restore or not?
-
-10.	Do the compare on the fly in restore C mode (useful
+9.	Do the compare on the fly in restore C mode (useful
 	when comparing huge files and you have not enough space
 	in /tmp).
